fixed overlapping objects on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -346,8 +346,8 @@ blockquote {
     display: block;
     z-index: 10;
     position: absolute;
-    bottom: 30px;
-    left: 50px;
+    bottom: 40px;
+    left: 49px;
     color: #ffffff;
     font-family: trajan-pro-3,
         serif;
